GNOME Bugzilla – Bug 795114
wasapisink stops outputting audio if pipeline goes PLAYING -> PAUSED -> PLAYING
Last modified: 2018-04-09 23:47:40 UTC
$description, reported by Mathieu_Du, verified by me. Not clear yet why this is happening.
Created attachment 370714 [details] [review] wasapi: Call _Start if the client was _Reset Otherwise we will wait forever in WaitForSingleObject because we forgot to start the client again after _Stop is called in reset().
Attachment 370714 [details] pushed as 0a518c9 - wasapi: Call _Start if the client was _Reset