sys/wasapi/gstwasapisink.h
@@ -45,6 +45,8 @@ struct _GstWasapiSink
   IAudioRenderClient *render_client;
   HANDLE event_handle;
   HANDLE thread_priority_handle;
+  /* Client was reset, so it needs to be started again */
+  gboolean client_needs_restart;
 
   /* Actual size of the allocated buffer */
   guint buffer_frame_count;
